redis_demo/redis_toy_app/Kubernetes/sce-create-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: __K8S_NAMESPACE__
  labels:
    name: __K8S_NAMESPACE__
