redis_demo/redis_toy_app/Kubernetes/redis_toy_app_deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: redistoyapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redistoyapp
  template:
    metadata:
      labels:
        app: redistoyapp
        version: v0.0.1
    spec:
      containers:
      - name: redistoyapp
        image: us.gcr.io/barnboys/redis_toy_app:latest
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 50Mi
        ports:
        - containerPort: 8080
