redis_demo/redis_toy_app/Kubernetes/redis_toy_app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redistoyapp
spec:
  ports:
  - name: http
    targetPort: 8080
    port: 80
  selector:
    app: redistoyapp
