redis_demo/redis_toy_app/Kubernetes/sce-deploy-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __K8S_APP_NAME__
  namespace: __K8S_NAMESPACE__
  labels:
    app: __K8S_APP_NAME__
spec:
  selector:
    matchLabels:
      app: __K8S_APP_NAME__
  template:
    metadata:
      labels:
        app: __K8S_APP_NAME__
        # Uncomment the following if you use AAD Pod Identity
        # aadpodidbinding: __K8S_APP_AAD_POD_IDENTITY_SELECTOR__
    spec:
      containers:
      - name: __K8S_APP_NAME__
        image: acrcmfgnplend.azurecr.io/redistoyapp:v2
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
              path: /
              port: 8080
          initialDelaySeconds: 10
          periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: __K8S_APP_NAME__
  namespace: __K8S_NAMESPACE__
  # The following two lines are required when using an ingress controller
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
  labels:
    app: __K8S_APP_NAME__
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: __K8S_APP_NAME__
