redis_demo/redis_toy_app/Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: redistoyapp
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: redistoyapp.barnprojects.com
    http:
      paths:
      - path: /
        backend:
          serviceName: redistoyapp
          servicePort: http
