redis_demo/redis_toy_app/Kubernetes/sce-ingress-routes.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: __K8S_APP_NAME__-route
  namespace: __K8S_NAMESPACE__
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
#services NEED to be in the same namespace as the ingress, otherwise you'll get a 503
  rules:
  - http:
      paths:
      - path: __K8S_APP_ROUTE__
        backend:
          serviceName: __K8S_APP_NAME__
          servicePort: 80
