redis_demo/redis_toy_app/Kubernetes/sce-network-policy-allow-external.yaml
# ALLOW traffic from the ingress controller namespace
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: __K8S_APP_NAME__-allow-external
  namespace: __K8S_NAMESPACE__
spec:
  podSelector:
    matchLabels:
      app: __K8S_APP_NAME__
  policyTypes:
  - Ingress  
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
