redis_demo/redis_toy_app/Kubernetes/sce-network-policy-app-deny-all.yaml
# DENY all traffic to an application
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: __K8S_APP_NAME__-deny-all
  namespace: __K8S_NAMESPACE__
spec:
  podSelector:
    matchLabels:
      app: __K8S_APP_NAME__
  ingress: []
