redis_demo/redis_toy_app/Kubernetes/sce-network-policy-deny-all.yaml
# DENY all non-whitelisted traffic to a namespace
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: __K8S_NAMESPACE__-deny-all
  namespace: __K8S_NAMESPACE__
spec:
  podSelector: {}
  ingress: []
